--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -8,6 +8,6 @@ metadata:
     backstage.io/techdocs-ref: dir:.
     github.com/team-slug: backstage/platform engineering
 spec:
-  type: service
-  owner: user:guest
+  type: resource
+  owner: group:platform-team
   lifecycle: development
