--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -12,7 +12,7 @@ spec:
   type: resource
   owner: group:platform-team
   lifecycle: development
-  tag:
+  tags:
   - azure
   - resource  
   - subscription
