--- a/.github\workflows/cd.yml
+++ b/.github\workflows/cd.yml
@@ -1,12 +1,7 @@
 name: 'Terraform Apply'
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+
+$ {{ values.trigger }}
   workflow_dispatch: 
 
 jobs:
