chore: Reverted trigger

--- a/.github\workflows/cd.yml
+++ b/.github\workflows/cd.yml
@@ -1,7 +1,12 @@
 name: 'Terraform Apply'
 
-
-${{ values.trigger }}
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
   workflow_dispatch: 
 
 jobs:
