--- a/.github\workflows/cd.yml
+++ b/.github\workflows/cd.yml
@@ -24,6 +24,16 @@ jobs:
         terraform_version: latest
         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
 
+    - name: 'Create TFC/E Workspace'
+      run: |
+        chmod +x .github/workflows/createWorkspace.sh
+        .github/workflows/createWorkspace.sh
+      env:
+        ORG_NAME: ${{ vars.ORG_NAME }}
+        PROJECT_ID: ${{ vars.PROJECT_ID }}
+        WORKSPACE_NAME: ${{ vars.WORKSPACE_NAME }}
+        TFE_TOKEN: ${{ secrets.TF_API_TOKEN }}        
+
     - name: 'Terraform Init'
       run: terraform init  
 
